I need to commit

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
 </head>
 <body>
+
+  <h1>Mars colonization structures</h1>
 
   <ul class="list-group-inline">
     <li class="center-text">
       <a class="block" href="#">
-        <i class="icon i-96">
+        <i class="icon i-192">
           <svg><use xlink:href="images/space-ships.svg#space-bubbles" /></svg>
         </i>
         <span class="block icon-text">Space bubbles</span>
@@ -22,7 +26,7 @@
   <ul class="list-group-inline">
     <li class="center-text">
       <a class="block" href="#">
-        <i class="icon i-96">
+        <i class="icon i-192">
           <svg><use xlink:href="images/space-ships.svg#mecha-stilts" /></svg>
         </i>
         <span class="block icon-text">Mecha-stilts</span>
@@ -32,7 +36,7 @@
   <ul class="list-group-inline">
     <li class="center-text">
       <a class="block" href="#">
-        <i class="icon i-96">
+        <i class="icon i-192">
           <svg><use xlink:href="images/space-ships.svg#super-domes" /></svg>
         </i>
         <span class="block icon-text">Super domes</span>
