final commit of the night

--- a/index.html
+++ b/index.html
@@ -5,44 +5,54 @@
   <title>Icons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <h1>Mars colonization structures</h1>
-
-  <ul class="list-group-inline">
-    <li class="center-text">
-      <a class="block" href="#">
-        <i class="icon i-192">
-          <svg><use xlink:href="images/space-ships.svg#space-bubbles" /></svg>
-        </i>
-        <span class="block icon-text">Space bubbles</span>
-      </a>
-    </li>
-  </ul>
-  <ul class="list-group-inline">
-    <li class="center-text">
-      <a class="block" href="#">
-        <i class="icon i-192">
-          <svg><use xlink:href="images/space-ships.svg#mecha-stilts" /></svg>
-        </i>
-        <span class="block icon-text">Mecha-stilts</span>
-      </a>
-    </li>
-  </ul>
-  <ul class="list-group-inline">
-    <li class="center-text">
-      <a class="block" href="#">
-        <i class="icon i-192">
-          <svg><use xlink:href="images/space-ships.svg#super-domes" /></svg>
-        </i>
-        <span class="block icon-text">Super domes</span>
-      </a>
-    </li>
-  </ul>
+  <section class="grid">
+    <ul class="unit xs- s- m- l- list-group-inline">
+      <li>
+        <a href="">
+          <h2 class="zetta">Mars colonization structures</h2>
+          <i class="icon i-192">
+            <svg><use xlink:href="images/space-ships.svg#space-bubbles" /></svg>
+          </i>
+          <span class="block icon-text bold pad-b-1-2 peta text-left pad-t">Space bubbles</span>
+          <p class="text-left pad-b-1-2">Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+        </a>
+        <a class="button text-center" href="#">Learn about space bubbles</a>
+        <hr>
+      </li>
+    </ul>
+    <ul class="list-group-inline">
+      <li>
+        <a href="#">
+          <i class="icon i-192">
+            <svg><use xlink:href="images/space-ships.svg#super-domes" /></svg>
+          </i>
+          <span class="block icon-text bold pad-b-1-4 peta text-left pad-t">Super domes</span>
+          <p class="text-left">Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+        </a>
+        <a class="button text-center" href="#">Learn about super domes</a>
+        <hr>
+      </li>
+    </ul>
+    <ul class="list-group-inline">
+      <li>
+        <a href="#">
+          <i class="icon i-192">
+            <svg><use xlink:href="images/space-ships.svg#mecha-stilts" /></svg>
+          </i>
+          <span class="block icon-text bold pad-b-1-2 peta text-left pad-t">Mecha-stilts</span>
+          <p class="text-left">Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+        </a>
+        <a class="button text-center" href="#">Learn about mecha-stilts</a>
+      </li>
+    </ul>
+  </section>
 
 </body>
 </html>
